Add comprehensive test suite and cleanup repository
- Add demo video with download link in README
- Create complete testing framework with 160+ test cases
  - FHE encryption tests (35 tests)
  - Smart contract interaction tests (40 tests)
  - Utility function tests (50 tests)
  - Integration tests (35 tests)
- Add test utilities and mocks (FHE, Wagmi)
- Update .gitignore to exclude lock files and build artifacts
- Remove unused contracts (ChainVote, LuckyDraw, NFTPlaza, AirdropFactory)
- Remove unused scripts (deploy-factory, deploy-lottery, etc.)
- Remove Python translation scripts
- Clean up lock files (bun.lockb, package-lock.json)
- Update package.json with test scripts

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Privacy-preserving airdrop distribution powered by Fully Homomorphic Encryption. Your allocation and claims stay encrypted on-chain." />
     <meta name="author" content="ConfAirdrop" />
     <meta name="keywords" content="airdrop, FHE, blockchain, privacy, encryption, crypto, web3" />
+    <meta name="theme-color" content="#0A0E14" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="alternate icon" type="image/x-icon" href="/favicon.ico" />
 
     <meta property="og:title" content="ConfAirdrop - Privacy-First FHE Airdrop Distribution" />
     <meta property="og:description" content="Privacy-preserving airdrop distribution powered by Fully Homomorphic Encryption. Your allocation and claims stay encrypted on-chain." />
